--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <title>WKC Dog Show</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="./src/dog.js"></script>
+    <!-- <script src="./src/dog.js"></script>
     <script src="./src/adapter.js"></script>
-    <script src="./src/dogController.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./src/dogController.js"></script> -->
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet">
   </head>
@@ -41,5 +40,7 @@
         </table>
       </div>
     </div>
+    <script src="./src/index.js"></script>
+    
   </body>
 </html>
